# movie_index

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md
movie_index/: pyproject.toml
movie_index/src/movie_index/: __main__.py
movie_index/src/movie_index/app/: __init__.py  _movie.py  _movie_index.py  _webpage.py
movie_index/src/movie_index/constants/: __init__.py  _constants.py
movie_index/src/movie_index/util/: __init__.py  _encoder.py  _typedef.py
